@@ -1,5 +1,7 @@
 0.7.0.9
 Issue #1042 Ensure that dotnetcore prerequisite is downloaded before starting the container
+Issue #1047 Increase download timeout to 300 seconds for each artifact and prerequisite
+Add timeout parameter to Download-File and Download-Artifacts
 
 0.7.0.8
 Issue #1038 Ensure that Download-Artifacts is more resilient towards exceptions or user cancellations during artifact expansion.
